2008-08-31  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (add-menu-comment): Add comments in menu.

	* src/clfswm-layout.lisp (main-window-left-layout)
	(main-window-bottom-layout, main-window-top-layout): New
	functions.
	Factorize layouts in menu.

2008-08-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (main-window-right-layout): A possible
	GIMP layout: one or more main windows on one side of the
	frame. Others on the other size.

	* src/clfswm-util.lisp
	(current-frame-set-click/sloppy-focus-policy): Each frame can have
	a different focus policy (one of :click or :sloppy).
	The default focus policy is set with *default-focus-policy*.

2008-08-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (show-config-variable): New function.

2008-08-19  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (tile-horizontal-layout): New layout.

	* src/clfswm-info.lisp: Colored help for key binding and corners
	actions.

2008-08-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (delete-focus-window)
	(destroy-focus-window): Remove chid only in 
	handle-unmap/destroy-notify. Focus *current-root* only when
	closing/killing the current child.

	* src/clfswm-autodoc.lisp (produce-corner-*-doc): New autodoc
	functions or corners.

2008-08-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-corner.lisp (present-clfswm-terminal): New corner
	action: Hide/Unhide a terminal on mouse corner action. (By default
	right mouse button on the top left corner).

	* src/config.lisp (*never-managed-window-list*): New config
	variable.

	* src/clfswm-internal.lisp (never-managed-window-p): New function:
	Handle never managed window in a more simple way.

	* src/clfswm-corner.lisp: New file and new and more simple method
	to define corners actions.

2008-08-15  Philippe Brochard  <pbrochard@common-lisp.net>
